// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of Contact Map. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Contact Map"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <ContactMapComponentClass
      contactColor="#009999"
      couplingColor="#000000"
      data={
        Object {
          "contactMonomer": Array [],
          "couplingScore": Array [],
          "distanceMapMonomer": Array [],
        }
      }
      height={405}
      highlightColor="#0000ff"
      onMouseEnter={[Function]}
      width={405}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of NGL. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="NGL"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <Component />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of Spring. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Spring"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <SpringComponentClass
      canvasBackgroundColor={13421772}
      data={
        Object {
          "links": Array [],
          "nodes": Array [],
        }
      }
      height={450}
      selectedCategory=""
      width={450}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of T-SNE. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="T-SNE"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <TComponentClass
      data={
        Array [
          Array [
            0,
          ],
          Array [
            0,
          ],
        ]
      }
      height={405}
      pointColor="#000000"
      width={405}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given no initial visualization. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="T-SNE"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <TComponentClass
      data={
        Array [
          Array [
            0,
          ],
          Array [
            0,
          ],
        ]
      }
      height={405}
      pointColor="#000000"
      width={405}
    />
  </Card>
</div>
`;
